Refactor deprecation